# EZ-Paster

./: CMakeLists.txt  README.md  draftwidget.cpp  draftwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  qhotkey.cpp  qhotkey.h  resizablepixmapitem.cpp  resizablepixmapitem.h
